fixing box overflow on the edit imod page

--- a/web-app/css/imod.css
+++ b/web-app/css/imod.css
@@ -10,6 +10,12 @@
 		list-style-type: none;
 }
 
+.imod_form {
+		margin: 0;
+		padding: 0;
+		width: calc(100%-10px);
+}
+
 .chapterLi:hover {
 		background-color: #d3d3d3;
 }
@@ -63,7 +69,6 @@
 
 table.inner_table {
 		position: relative;
-		left: -62.5px;
 		width: 100%;
 		height: 100%;
 }
@@ -77,7 +82,16 @@ td {
 		right: 25px;
 }
 
-.course_overview_form, .topic_hierarchy_widget, .topic_information_widget, .chapter_addition_widget, .topic_addition_widget, .topic_schedule_widget {
+.course_overview_form {
+	margin: 5px;
+}
+
+.course_overview_form,
+.topic_hierarchy_widget,
+.topic_information_widget,
+.chapter_addition_widget,
+.topic_addition_widget,
+.topic_schedule_widget {
 		padding: 0px 0px 20px 0px;
 		border: solid 1px #C0C0C0;
 		border-radius: 15px;
